Renamed open* -> * at request of Theo de Raadt <deraadt@cvs.openbsd.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,9 +7,9 @@ libdir=@libdir@
 CC=@CC@
 OPT_FLAGS=-g
 CFLAGS=$(OPT_FLAGS) -Wall -DETCDIR=\"@sysconfdir@\" @DEFS@
-TARGETS=bin/libopenssh.a bin/openssh bin/opensshd bin/openssh-add bin/openssh-keygen bin/openssh-agent bin/openscp
+TARGETS=bin/libssh.a bin/ssh bin/sshd bin/ssh-add bin/ssh-keygen bin/ssh-agent bin/scp
 LFLAGS=-L./bin
-LIBS=-lopenssh @LIBS@
+LIBS=-lssh @LIBS@
 AR=@AR@
 RANLIB=@RANLIB@
 
@@ -23,32 +23,32 @@ OBJS=	authfd.o authfile.o auth-passwd.o auth-rhosts.o auth-rh-rsa.o \
 
 all: $(OBJS) $(TARGETS)
 
-bin/libopenssh.a: authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o deattack.o hostfile.o match.o mpaux.o nchan.o packet.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o helper.o rc4.o mktemp.o strlcpy.o
+bin/libssh.a: authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o deattack.o hostfile.o match.o mpaux.o nchan.o packet.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o helper.o rc4.o mktemp.o strlcpy.o
 	[ -d bin ] || mkdir bin
 	$(AR) rv $@ $^
 	$(RANLIB) $@
 
-bin/openssh: ssh.o sshconnect.o log-client.o readconf.o clientloop.o
+bin/ssh: ssh.o sshconnect.o log-client.o readconf.o clientloop.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-bin/opensshd:	sshd.o auth-rhosts.o auth-passwd.o auth-rsa.o auth-rh-rsa.o pty.o log-server.o login.o servconf.o serverloop.o
+bin/sshd:	sshd.o auth-rhosts.o auth-passwd.o auth-rsa.o auth-rh-rsa.o pty.o log-server.o login.o servconf.o serverloop.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-bin/openscp:	scp.o
+bin/scp:	scp.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-bin/openssh-add: ssh-add.o log-client.o
+bin/ssh-add: ssh-add.o log-client.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-bin/openssh-agent: ssh-agent.o log-client.o
+bin/ssh-agent: ssh-agent.o log-client.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-bin/openssh-keygen: ssh-keygen.o log-client.o
+bin/ssh-keygen: ssh-keygen.o log-client.o
 	[ -d bin ] || mkdir bin
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
@@ -59,13 +59,13 @@ install:
 	install -d $(bindir)
 	install -d $(sbindir)
 	install -d $(libdir)
-	install -c bin/openssh $(bindir)/openssh
-	install -c bin/openscp $(bindir)/openscp
-	install -c bin/openssh-add $(bindir)/openssh-add
-	install -c bin/openssh-agent $(bindir)/openssh-agent
-	install -c bin/openssh-keygen $(bindir)/openssh-keygen
-	install -c bin/opensshd $(sbindir)/opensshd
-	install -c bin/libopenssh.a $(libdir)/libopenssh.a
+	install -c bin/ssh $(bindir)/ssh
+	install -c bin/scp $(bindir)/scp
+	install -c bin/ssh-add $(bindir)/ssh-add
+	install -c bin/ssh-agent $(bindir)/ssh-agent
+	install -c bin/ssh-keygen $(bindir)/ssh-keygen
+	install -c bin/sshd $(sbindir)/sshd
+	install -c bin/libssh.a $(libdir)/libssh.a
 
 distclean: clean
 	rm -f Makefile config.h *~
