- Removed redundant subdirectories  - Integrated part of a patch from Dan Brosemer <odin@linuxfreak.com> for    building on Debian.

--- a/config.h.in
+++ b/config.h.in
@@ -126,6 +126,9 @@
 /* Define if you have the dl library (-ldl).  */
 #undef HAVE_LIBDL
 
+/* Define if you have the nsl library (-lnsl).  */
+#undef HAVE_LIBNSL
+
 /* Define if you have the pam library (-lpam).  */
 #undef HAVE_LIBPAM
 
