--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
+
 AC_INIT(auth-krb4.c)
 
 AC_CONFIG_HEADER(config.h)
@@ -62,5 +63,11 @@ AC_CHECK_HEADERS(pty.h)
 dnl Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
 AC_CHECK_FUNCS(openpty strlcpy mkdtemp arc4random setproctitle)
+
+dnl Check whether user wants GNOME ssh-askpass
+AC_ARG_WITH(gnome-askpass,
+	[  --with-gnome-askpass    Build and use the GNOME passphrase requester],
+	[GNOME_ASKPASS="gnome-ssh-askpass"])
+AC_SUBST(GNOME_ASKPASS)
 
 AC_OUTPUT(Makefile)
