- Merged more OpenBSD CVS changes:    - [auth-krb4.c auth-passwd.c] remove x11- and krb-cleanup from fatal()      + krb-cleanup cleanup    - [clientloop.c log-client.c log-server.c ]      [readconf.c readconf.h servconf.c servconf.h ]      [ssh.1 ssh.c ssh.h sshd.8]      add LogLevel {QUIET, FATAL, ERROR, INFO, CHAT, DEBUG} to ssh/sshd,      obsoletes QuietMode and FascistLogging in sshd.

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ OBJS=	authfd.o authfile.o auth-passwd.o auth-rhosts.o auth-rh-rsa.o \
 
 all: $(OBJS) $(TARGETS)
 
-libssh.a: authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o deattack.o hostfile.o match.o mpaux.o nchan.o packet.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o helper.o rc4.o mktemp.o strlcpy.o
+libssh.a: authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o deattack.o hostfile.o match.o mpaux.o nchan.o packet.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o helper.o rc4.o mktemp.o strlcpy.o log.o
 	$(AR) rv $@ $^
 	$(RANLIB) $@
 
