--- a/Makefile.in
+++ b/Makefile.in
@@ -64,27 +64,30 @@ install: all
 	install -d $(mandir)
 	install -d $(mandir)/man1
 	install -d $(mandir)/man8
-	install -d $(libdir)
-	install -d $(libdir)/ssh
 	install -s -c ssh $(bindir)/ssh
-	ln -sf ssh $(bindir)/slogin
 	install -s -c scp $(bindir)/scp
 	install -s -c ssh-add $(bindir)/ssh-add
-	if [ -z "@GNOME_ASKPASS@" ] ; then \
-		install -m755 -c ssh-askpass $(libdir)/ssh/ssh-askpass; \
-	else \
-		install -m755 -c gnome-ssh-askpass $(libdir)/ssh/ssh-askpass; \
-	fi
 	install -s -c ssh-agent $(bindir)/ssh-agent
 	install -s -c ssh-keygen $(bindir)/ssh-keygen
 	install -s -c sshd $(sbindir)/sshd
 	install -m644 -c ssh.1 $(mandir)/man1/ssh.1
-	ln -sf ssh.1 $(mandir)/man1/slogin.1
 	install -m644 -c scp.1 $(mandir)/man1/scp.1
 	install -m644 -c ssh-add.1 $(mandir)/man1/ssh-add.1
 	install -m644 -c ssh-agent.1 $(mandir)/man1/ssh-agent.1
 	install -m644 -c ssh-keygen.1 $(mandir)/man1/ssh-keygen.1
 	install -m644 -c sshd.8 $(mandir)/man8/sshd.8
+	ln -sf ssh $(bindir)/slogin
+	ln -sf ssh.1 $(mandir)/man1/slogin.1
+
+	if [ ! -z "@DISABLE_EXTERNAL_ASKPASS@" ] ; then \
+		install -d $(libdir) \
+		install -d $(libdir)/ssh \
+		if [ -z "@GNOME_ASKPASS@" ] ; then \
+			install -m755 -c ssh-askpass $(libdir)/ssh/ssh-askpass; \
+		else \
+			install -m755 -c gnome-ssh-askpass $(libdir)/ssh/ssh-askpass; \
+		fi \
+	fi
 
 distclean: clean
 	rm -f Makefile config.h core *~
