--- a/configure.in
+++ b/configure.in
@@ -108,4 +108,14 @@ if test -z "$RANDOM_POOL" -a -z "$EGD_POOL"; then
 	AC_MSG_ERROR([No random device found, and no EGD random pool specified])
 fi
 
+dnl Check whether use wants to disable the external ssh-askpass
+AC_ARG_WITH(askpass,
+	[  --without-askpass       Disable external ssh-askpass support],
+	[
+		AC_DEFINE(DISABLE_EXTERNAL_ASKPASS)
+		DISABLE_EXTERNAL_ASKPASS=yes
+		AC_SUBST(DISABLE_EXTERNAL_ASKPASS)
+	]
+)
+
 AC_OUTPUT(Makefile)
