--- a/Makefile.in
+++ b/Makefile.in
@@ -80,13 +80,13 @@ install: all
 	ln -sf ssh.1 $(mandir)/man1/slogin.1
 
 	if [ ! -z "@DISABLE_EXTERNAL_ASKPASS@" ] ; then \
-		install -d $(libdir) \
-		install -d $(libdir)/ssh \
+		install -d $(libdir) ; \
+		install -d $(libdir)/ssh ; \
 		if [ -z "@GNOME_ASKPASS@" ] ; then \
 			install -m755 -c ssh-askpass $(libdir)/ssh/ssh-askpass; \
 		else \
 			install -m755 -c gnome-ssh-askpass $(libdir)/ssh/ssh-askpass; \
-		fi \
+		fi ; \
 	fi
 
 distclean: clean
