--- a/Makefile.in
+++ b/Makefile.in
@@ -79,7 +79,7 @@ install: all
 	ln -sf ssh $(bindir)/slogin
 	ln -sf ssh.1 $(mandir)/man1/slogin.1
 
-	if [ ! -z "@DISABLE_EXTERNAL_ASKPASS@" ] ; then \
+	if [ ! -z "@INSTALL_ASKPASS@" ] ; then \
 		install -d $(libdir) ; \
 		install -d $(libdir)/ssh ; \
 		if [ -z "@GNOME_ASKPASS@" ] ; then \
