--- a/configure.in
+++ b/configure.in
@@ -111,11 +111,9 @@ fi
 dnl Check whether use wants to disable the external ssh-askpass
 AC_ARG_WITH(askpass,
 	[  --without-askpass       Disable external ssh-askpass support],
-	[
-		AC_DEFINE(DISABLE_EXTERNAL_ASKPASS)
-		DISABLE_EXTERNAL_ASKPASS=yes
-		AC_SUBST(DISABLE_EXTERNAL_ASKPASS)
-	]
+	[AC_DEFINE(DISABLE_EXTERNAL_ASKPASS)],
+	[INSTALL_ASKPASS="yes"]
 )
+AC_SUBST(INSTALL_ASKPASS)
 
 AC_OUTPUT(Makefile)
