- Added shadow password patch from Thomas Neumann <tom@smart.ruhr.de>  - Added ifdefs to auth-passwd.c to exclude it when PAM is enabled

--- a/configure.in
+++ b/configure.in
@@ -55,7 +55,7 @@ AC_CHECK_LIB(dl, dlopen, , )
 AC_CHECK_LIB(pam, pam_authenticate, , )
 
 dnl Checks for header files.
-AC_CHECK_HEADERS(pty.h endian.h paths.h lastlog.h)
+AC_CHECK_HEADERS(pty.h endian.h paths.h lastlog.h shadow.h)
 
 dnl Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
