- Merged OpenBSD CVS changes:    - [ssh-add.c] change passphrase loop logic and remove ref to      $DISPLAY, ok niels  - Changed to ssh-add.c broke askpass support. Revised it to be a little more    modular.  - Revised autoconf support for enabling/disabling askpass support.

--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ install: all
 	ln -sf ssh $(bindir)/slogin
 	ln -sf ssh.1 $(mandir)/man1/slogin.1
 
-	if [ ! -z "@INSTALL_ASKPASS@" ] ; then \
+	if [ "x@INSTALL_ASKPASS@" = "xyes" ] ; then \
 		install -d $(libdir) ; \
 		install -d $(libdir)/ssh ; \
 		if [ -z "@GNOME_ASKPASS@" ] ; then \
